# ProjetoSO_23-24

./: README.md  polygon.txt  requisito03.c  requisito03.h  requisito04.c  requisito04.h  requisito_5.c  requisito_5.h
ProjetoSO/: CMakeLists.txt  monteCarlo.c  monteCarlo.h  requisito_1.c  requisito_1.h  requisito_2.c  requisito_2.h  requisito_3.c  requisito_3.h  requisito_4.c  requisito_4.h  requisito_5.c  requisito_5.h
ProjetoSO2/: CMakeLists.txt  monteCarlo.c  monteCarlo.h  requisito_1_2ºfase.c  requisito_1_2ºfase.h  requisito_2_2ºfase.c  requisito_2_2ºfase.h  requisito_3_2ºfase.c  requisito_3_2ºfase.h  requisito_3b_2ºfase.c  requisito_3b_2ºfase.h
